moving to bytes